--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -1,4 +1,4 @@
-<div class="w-full bg-gray-800 p-4 flex items-center relative">
+<div class="w-full bg-gray-800 p-4 flex items-center fixed top-0 left-0 z-10">
   <div class="absolute left-0 flex items-center p-4">
     <img src="/logo.png" alt="Logo" class="h-12">
   </div>
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<div class="flex flex-col lg:flex-row h-screen mx-4 lg:mx-24">
+<div class="flex flex-col lg:flex-row h-screen pt-20 mx-4 lg:mx-24">
   <div class="w-full lg:w-1/6 bg-gray-200 p-4 mt-4 mb-4 lg:mt-0 lg:mb-0">
     <p class="text-center">User Profile Placeholder</p>
   </div>
