Implement the sign out method

--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -6,7 +6,7 @@
     <input type="text" placeholder="Search..." class="w-full p-2 rounded-md" />
   </div>
   <div class="absolute right-0 flex items-center pr-6 p-4">
-    <a href="#" class="text-white">Sign Out</a>
+    <a href="#" class="text-white" (click)="signOut()">Sign Out</a>
   </div>
 </div>
 
