--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -11,13 +11,13 @@
 </div>
 
 <div class="flex flex-col lg:flex-row h-screen pt-20 mx-4 lg:mx-24">
-  <div class="w-full lg:w-1/5 bg-gray-200 p-4 mt-4 mb-4 lg:mt-0 lg:mb-0">
+  <div class="w-full lg:w-1/5 bg-gray-200 p-4 mt-2 mb-4 lg:mt-0 lg:mb-0">
     <p class="text-center">User Profile Placeholder</p>
   </div>
-  <div class="w-full lg:w-3/5 flex items-center justify-center bg-gray-100 p-4 h-full lg:h-auto">
+  <div class="w-full lg:w-3/5 flex items-center justify-center bg-gray-100 p-4 h-full lg:h-auto mb-4 lg:mb-0">
     <p>Feed Placeholder</p>
   </div>
-  <div class="hidden lg:block lg:w-1/5 bg-gray-200 p-4">
+  <div class="hidden lg:block lg:w-1/5 bg-gray-200 p-4 mt-4 mb-4 lg:mt-0 lg:mb-0">
     <p class="text-center">Recommendations Placeholder</p>
   </div>
 </div>
