--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,1 +1,21 @@
-<p>user-profile works!</p>
+<div class="max-w-sm mx-auto bg-white shadow-lg rounded-lg overflow-hidden">
+  <div class="bg-gray-800 p-4 flex justify-center">
+    <app-avatar name="User Name"></app-avatar>
+  </div>
+  <div class="p-4">
+    <ul class="list-none">
+      <li class="py-2 border-b border-gray-200">
+        <a href="#" class="text-gray-800 hover:text-gray-600">Feed</a>
+      </li>
+      <li class="py-2 border-b border-gray-200">
+        <a href="#" class="text-gray-800 hover:text-gray-600">Reading</a>
+      </li>
+      <li class="py-2 border-b border-gray-200">
+        <a href="#" class="text-gray-800 hover:text-gray-600">Want to read</a>
+      </li>
+      <li class="py-2">
+        <a href="#" class="text-gray-800 hover:text-gray-600">Recommendations</a>
+      </li>
+    </ul>
+  </div>
+</div>
