--- a/src/shared/avatar/avatar.component.html
+++ b/src/shared/avatar/avatar.component.html
@@ -1,6 +1,12 @@
-<div class="w-24 h-24 rounded-full bg-gray-800 flex items-center justify-center text-white text-3xl">
-  <ng-container *ngIf="!imageUrl">{{ initials }}</ng-container>
-  <ng-container *ngIf="imageUrl">
-    <img [src]="imageUrl" alt="Profile Image" class="w-full h-full rounded-full object-cover">
-  </ng-container>
+<div class="flex flex-col items-center">
+  <div [ngStyle]="{'background-color': backgroundColor}" class="w-16 h-16 rounded-full flex items-center justify-center text-white text-2xl">
+    <ng-container *ngIf="!imageUrl">{{ initials }}</ng-container>
+    <ng-container *ngIf="imageUrl">
+      <img [src]="imageUrl" alt="Profile Image" class="w-full h-full rounded-full object-cover">
+    </ng-container>
+  </div>
+  <div class="mt-2 text-white text-lg relative">
+    <span class="absolute inset-0 bg-gray-500 opacity-20 blur-sm rounded"></span>
+    <span class="relative">{{ name }}</span>
+  </div>
 </div>
