--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -12,7 +12,7 @@
 
 <div class="flex flex-col lg:flex-row h-screen pt-20 mx-4 lg:mx-24">
   <div class="w-full lg:w-1/5 bg-gray-200 p-4 mt-2 mb-4 lg:mt-0 lg:mb-0">
-    <app-user-profile backgroundImageUrl="background.jpg"></app-user-profile>
+    <app-side-menu backgroundImageUrl="background.jpg"></app-side-menu>
   </div>
   <div class="w-full lg:w-3/5 flex items-center justify-center bg-gray-100 p-4 h-full lg:h-auto mb-4 lg:mb-0">
     <p>Feed Placeholder</p>
