Have the position of the name configurable

--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -1,6 +1,6 @@
 <div class="flex items-center bg-white shadow-lg rounded-lg p-4">
   <div class="mr-4">
-    <app-avatar name="Alex Turcan"  position="bottom"></app-avatar>
+    <app-avatar name="Alex Turcan"  position="right"></app-avatar>
   </div>
   <ul class="flex space-x-4 list-none">
     <li>
