--- a/src/shared/avatar/avatar.component.html
+++ b/src/shared/avatar/avatar.component.html
@@ -1,11 +1,15 @@
-<div class="flex flex-col items-center">
+<div [ngClass]="positionClasses" class="flex items-center">
   <div [ngStyle]="{'background-color': backgroundColor}" class="w-16 h-16 rounded-full flex items-center justify-center text-white text-2xl">
     <ng-container *ngIf="!imageUrl">{{ initials }}</ng-container>
     <ng-container *ngIf="imageUrl">
       <img [src]="imageUrl" alt="Profile Image" class="w-full h-full rounded-full object-cover">
     </ng-container>
   </div>
-  <div class="mt-2 text-white text-lg relative">
+  <div class="mt-2 text-white text-lg relative" *ngIf="position === 'bottom' || position === 'top'">
+    <span class="absolute inset-0 bg-gray-500 opacity-20 blur-sm rounded"></span>
+    <span class="relative">{{ name }}</span>
+  </div>
+  <div class="ml-2 text-white text-lg relative" *ngIf="position === 'left' || position === 'right'">
     <span class="absolute inset-0 bg-gray-500 opacity-20 blur-sm rounded"></span>
     <span class="relative">{{ name }}</span>
   </div>
