--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -13,7 +13,7 @@
 <div class="flex flex-col lg:flex-row h-screen pt-20 mx-4 lg:mx-24">
   <div class="w-full lg:w-1/5 bg-gray-200 p-4 mt-2 mb-4 lg:mt-0 lg:mb-0">
     <div class="block lg:hidden">
-      <app-top-menu></app-top-menu>
+      <app-top-menu backgroundImageUrl="background.jpg"></app-top-menu>
     </div>
     <div class="hidden lg:block">
       <app-side-menu backgroundImageUrl="background.jpg"></app-side-menu>
