--- a/src/shared/avatar/avatar.component.html
+++ b/src/shared/avatar/avatar.component.html
@@ -1,5 +1,5 @@
 <div [ngClass]="positionClasses" class="flex items-center">
-  <div [ngStyle]="{'background-color': backgroundColor}" class="w-16 h-16 rounded-full flex items-center justify-center text-white text-2xl">
+  <div [ngClass]="sizeClasses" [ngStyle]="{'background-color': backgroundColor}" class="rounded-full flex items-center justify-center text-white text-2xl">
     <ng-container *ngIf="!imageUrl">{{ initials }}</ng-container>
     <ng-container *ngIf="imageUrl">
       <img [src]="imageUrl" alt="Profile Image" class="w-full h-full rounded-full object-cover">
