taller results set

--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,7 +1,8 @@
+<!-- src/app/search-bar/search-bar.component.html -->
 <div class="relative">
   <input type="text" placeholder="Search..." class="w-full p-2 rounded-md" (input)="onSearch($event)" />
   <div *ngIf="showResults" class="absolute left-0 right-0 bg-white border border-gray-300 mt-2 rounded-md shadow-lg">
-    <ul class="max-h-52 overflow-y-auto">
+    <ul class="max-h-80 overflow-y-auto">
       <li *ngFor="let item of items" class="p-2 border-b border-gray-200 cursor-pointer last:border-0 hover:bg-gray-100">
         <app-search-result [result]="item"></app-search-result>
       </li>
