--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,12 +1,17 @@
 <!-- src/app/search-bar/search-bar.component.html -->
 <div class="relative">
-  <input type="text" placeholder="Search..." class="w-full p-2 rounded-md pr-10" (input)="onSearch($event)" #searchInput />
-  <button *ngIf="searchInput.value" (click)="clearSearch(searchInput)" class="absolute right-2 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700 text-xl p-1">
-    &times;
-  </button>
+  <input type="text" placeholder="Search..." class="w-full p-2 rounded-md pr-10" (input)="onSearch($event)"
+         #searchInput/>
+  <div class="absolute right-2 top-1/2 transform -translate-y-1/2 ">
+    <button *ngIf="searchInput.value" (click)="clearSearch(searchInput)"
+            class="mb-1 text-gray-500 hover:text-gray-700 text-xl p-1 flex items-center justify-center h-8 leading-none">
+      &times;
+    </button>
+  </div>
   <div *ngIf="showResults" class="absolute left-0 right-0 bg-white border border-gray-300 mt-2 rounded-md shadow-lg">
     <ul class="max-h-80 overflow-y-auto">
-      <li *ngFor="let item of items" class="p-2 border-b border-gray-200 cursor-pointer last:border-0 hover:bg-gray-100">
+      <li *ngFor="let item of items"
+          class="p-2 border-b border-gray-200 cursor-pointer last:border-0 hover:bg-gray-100">
         <app-search-result [result]="item"></app-search-result>
       </li>
     </ul>
