--- a/src/shared/search-result/search-result.component.html
+++ b/src/shared/search-result/search-result.component.html
@@ -1,5 +1,6 @@
 <div class="flex items-center p-2">
-  <img [src]="result.imageUrl" alt="Image" class="h-12 w-12 rounded-md mr-4">
+  <ngx-skeleton-loader *ngIf="!imageLoaded" class="h-12 w-12 rounded-md mr-4" count="1" appearance="line" [theme]="{ width: '48px', height: '48px' }"></ngx-skeleton-loader>
+  <img [src]="result.imageUrl" alt="Image" class="h-12 w-12 rounded-md mr-4" [class.hidden]="!imageLoaded" (load)="onImageLoad()">
   <div>
     <div class="font-bold">{{ result.title }}</div>
     <div class="text-gray-600">{{ result.subTitle }}</div>
