--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -1,1 +1,19 @@
-<p>book-details works!</p>
+<div class="p-4 bg-white rounded shadow-md">
+  <div class="text-2xl font-bold mb-4">{{ book?.title }}</div>
+  <div class="flex">
+    <div class="w-1/3">
+      <img [src]="'api/books/cover/' + book?.coverId + '?size=m'" alt="Book Cover" class="w-full rounded-md">
+    </div>
+    <div class="w-2/3 pl-4">
+      <div class="mb-2">
+        <span class="font-semibold">Authors:</span> {{ book?.authors.join(', ') }}
+      </div>
+      <div class="mb-2">
+        <span class="font-semibold">Description:</span> {{ book?.description }}
+      </div>
+      <div class="mb-2">
+        <span class="font-semibold">Subjects:</span> {{ book?.subjects.join(', ') }}
+      </div>
+    </div>
+  </div>
+</div>
