--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -20,8 +20,8 @@
       <app-side-menu backgroundImageUrl="background.jpg"></app-side-menu>
     </div>
   </div>
-  <div class="w-full lg:w-3/5 flex items-center justify-center bg-gray-100 p-4 h-full lg:h-auto mb-4 lg:mb-0">
-    <p>Feed Placeholder</p>
+  <div class="flex-1 bg-gray-100 p-4 h-full lg:h-auto mb-4 lg:mb-0">
+    <router-outlet></router-outlet>
   </div>
   <div class="hidden lg:block lg:w-1/5 p-4 mt-4 mb-4 lg:mt-0 lg:mb-0">
     <p class="text-center">Recommendations Placeholder</p>
