--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -8,7 +8,7 @@
   </div>
   <div *ngIf="showResults" class="absolute left-0 right-0 bg-white border border-gray-300 mt-2 rounded-md shadow-lg">
     <ul class="max-h-80 overflow-y-auto">
-      <li *ngFor="let item of items" class="p-2 border-b border-gray-200 cursor-pointer last:border-0 hover:bg-gray-100">
+      <li *ngFor="let item of items" class="p-2 border-b border-gray-200 cursor-pointer last:border-0 hover:bg-gray-100" (click)="onResultClick(item.objectID)">
         <app-search-result [result]="item" [isLoading]="loading"></app-search-result>
       </li>
     </ul>
