--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -3,7 +3,7 @@
   <div class="text-2xl font-bold mb-4">{{ book?.title }}</div>
   <div class="flex">
     <div class="w-1/3">
-      <img [src]="'api/books/cover/' + book?.coverId + '?size=m'" alt="Book Cover" class="w-full rounded-md">
+      <img [src]="'api/books/cover/' + book?.coverId + '?size=m'" alt="Book Cover" class="w-full max-w-xs max-h-96 aspect-[1/1.5] rounded-md">
     </div>
     <div class="w-2/3 pl-4">
       <div class="mb-2">
