Adjust the layout

--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -1,6 +1,6 @@
 <!-- src/app/book-details/book-details.component.html -->
 <div class="p-4 bg-white rounded shadow-md w-full">
-  <div class="text-2xl font-bold mb-4">{{ book?.title }}</div>
+  <div class="text-2xl font-semibold mb-4">{{ book?.title }}</div>
   <div class="flex">
     <div class="w-1/3">
       <img [src]="'api/books/cover/' + book?.coverId + '?size=m'" alt="Book Cover" class="w-full max-w-xs max-h-96 aspect-[1/1.5] rounded-md">
