--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="w-2/3 pl-4">
       <div class="mb-2">
-        <span class="font-semibold">Authors:</span> {{ (book?.authors??[]) .join(', ') }}
+        <span class="font-semibold">Authors:</span> {{ authorsList }}
       </div>
       <div class="mb-2">
         <span class="font-semibold">Description:</span> {{ book?.description }}
