--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -1,19 +1,19 @@
 <!-- src/app/book-details/book-details.component.html -->
-<div class="p-4 bg-white rounded shadow-md w-full">
-  <div class="text-2xl font-semibold mb-4">{{ book?.title }}</div>
+<div class="p-4 bg-white rounded shadow-md w-full" *ngIf="book$ | async as book">
+  <div class="text-2xl font-semibold mb-4">{{ book.title }}</div>
   <div class="flex">
     <div class="w-1/3">
-      <img [src]="'api/books/cover/' + book?.coverId + '?size=m'" alt="Book Cover" class="w-full max-w-xs max-h-96 aspect-[1/1.5] rounded-md">
+      <img [src]="'api/books/cover/' + book.coverId + '?size=m'" alt="Book Cover" class="w-full max-w-xs max-h-96 aspect-[1/1.5] rounded-md">
     </div>
     <div class="w-2/3 pl-4">
       <div class="mb-2">
-        <span class="font-semibold">Authors:</span> {{ authorsList }}
+        <span class="font-semibold">Authors:</span> {{ authorsList$ | async }}
       </div>
       <div class="mb-2">
-        <span class="font-semibold">Description:</span> {{ book?.description }}
+        <span class="font-semibold">Description:</span> {{ book.description }}
       </div>
       <div class="mb-2">
-        <span class="font-semibold">Subjects:</span> {{ (book?.subjects ?? []).join(', ') }}
+        <span class="font-semibold">Subjects:</span> {{ (book.subjects ?? []).join(', ') }}
       </div>
     </div>
   </div>
