--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -1,20 +1,45 @@
 <!-- src/app/book-details/book-details.component.html -->
-<div class="p-4 bg-white rounded shadow-md w-full" *ngIf="book$ | async as book">
-  <div class="text-2xl font-semibold mb-4">{{ book.title }}</div>
-  <div class="flex">
-    <div class="w-1/3">
-      <img [src]="'api/books/cover/' + book.coverId + '?size=m'" alt="Book Cover" class="w-full max-w-xs max-h-96 aspect-[1/1.5] rounded-md">
-    </div>
-    <div class="w-2/3 pl-4">
-      <div class="mb-2">
-        <span class="font-semibold">Authors:</span> {{ authorsList$ | async }}
+<div class="p-4 bg-white rounded shadow-md w-full">
+  <div *ngIf="book$ | async as book; else loading">
+
+    <ng-container *ngIf="!isLoading; else loading">
+
+      <div class="text-2xl font-semibold mb-4">{{ book.title }}</div>
+      <div class="flex">
+        <div class="w-1/3">
+          <img [src]="'api/books/cover/' + book.coverId + '?size=m'" alt="Book Cover"
+               class="w-full max-w-xs max-h-96 aspect-[1/1.5] rounded-md">
+        </div>
+        <div class="w-2/3 pl-4">
+          <div class="mb-2">
+            <span class="font-semibold">Authors:</span> {{ authorsList$ | async }}
+          </div>
+          <div class="mb-2">
+            <span class="font-semibold">Description:</span> {{ book.description }}
+          </div>
+          <div class="mb-2">
+            <span class="font-semibold">Subjects:</span> {{ (book.subjects).join(', ') }}
+          </div>
+        </div>
       </div>
-      <div class="mb-2">
-        <span class="font-semibold">Description:</span> {{ book.description }}
-      </div>
-      <div class="mb-2">
-        <span class="font-semibold">Subjects:</span> {{ (book.subjects ?? []).join(', ') }}
-      </div>
-    </div>
+    </ng-container>
   </div>
+
+  <ng-template #loading>
+
+    <div class="animate-pulse">
+      <div class="h-8 bg-gray-300 rounded w-3/4 mb-4"></div>
+      <div class="flex">
+        <div class="w-1/3">
+          <div class="h-96 bg-gray-300 rounded-md"></div>
+        </div>
+        <div class="w-2/3 pl-4">
+          <div class="h-6 bg-gray-300 rounded w-1/2 mb-2"></div>
+          <div class="h-6 bg-gray-300 rounded w-full mb-2"></div>
+          <div class="h-6 bg-gray-300 rounded w-3/4 mb-2"></div>
+        </div>
+      </div>
+    </div>
+
+  </ng-template>
 </div>
