Add "add to favorites" button

--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -11,7 +11,7 @@
       <a href="#" class="text-gray-800 hover:text-gray-600">Reading</a>
     </li>
     <li>
-      <a href="#" class="text-gray-800 hover:text-gray-600">Want to read</a>
+      <a href="#" class="text-gray-800 hover:text-gray-600">Favorites</a>
     </li>
     <li>
       <a href="#" class="text-gray-800 hover:text-gray-600">Recommendations</a>
