--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -1,10 +1,13 @@
 <!-- src/app/book-details/book-details.component.html -->
 <div class="p-4 bg-white rounded-lg shadow-md w-full">
   <div *ngIf="book$ | async as book; else loading">
-
     <ng-container *ngIf="!isLoading; else loading">
-
-      <div class="text-2xl font-semibold mb-4">{{ book.title }}</div>
+      <div class="flex justify-between items-center mb-4">
+        <div class="text-2xl font-semibold">{{ book.title }}</div>
+        <button (click)="toggleFavorite()" [class.text-yellow-500]="isFavorite" class="text-gray-400 hover:text-yellow-500">
+          <i class="fas fa-star"></i>
+        </button>
+      </div>
       <div class="flex">
         <div class="w-1/3 relative">
           <div class="absolute inset-0 flex justify-center" [class.hidden]="imageLoaded">
@@ -30,7 +33,6 @@
   </div>
 
   <ng-template #loading>
-
     <div class="animate-pulse">
       <div class="h-8 bg-gray-300 rounded w-3/4 mb-4"></div>
       <div class="flex">
@@ -44,6 +46,5 @@
         </div>
       </div>
     </div>
-
   </ng-template>
 </div>
