--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -12,7 +12,7 @@
         <a href="#" class="text-gray-800 hover:text-gray-600">Reading</a>
       </li>
       <li class="py-2 border-b border-gray-200">
-        <a href="#" class="text-gray-800 hover:text-gray-600">Want to read</a>
+        <a href="#" class="text-gray-800 hover:text-gray-600">Favorites</a>
       </li>
       <li class="py-2">
         <a href="#" class="text-gray-800 hover:text-gray-600">Recommendations</a>
