Add request authorization

--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -4,7 +4,7 @@
     <ng-container *ngIf="!isLoading; else loading">
       <div class="flex justify-between items-center mb-4">
         <div class="text-2xl font-semibold">{{ book.title }}</div>
-        <button (click)="toggleFavorite()" [class.text-yellow-500]="isFavorite" class="text-gray-400 hover:text-yellow-500">
+        <button (click)="toggleFavorite(book)" [class.text-yellow-500]="isFavorite" class="text-gray-400 hover:text-yellow-500">
           <i class="fas fa-star"></i>
         </button>
       </div>
