Add user-favorites component layout

--- a/src/shared/book-card/book-card.component.html
+++ b/src/shared/book-card/book-card.component.html
@@ -1,9 +1,9 @@
-<div class="max-w-sm mx-auto bg-white shadow-lg rounded-lg overflow-hidden">
+<div class="max-w-sm mx-auto bg-white shadow-lg rounded-lg overflow-hidden" style="display: block;">
   <div class="relative" style="height: 66.67%;">
     <img *ngIf="book" [src]="'api/books/cover/' + book.coverId + '?size=l'" class="w-full h-full object-cover">
   </div>
   <div class="p-4">
     <div class="text-xl font-semibold">{{ book?.title }}</div>
-    <div class="text-gray-600">{{ book?.authors.map(author => author.name).join(', ') }}</div>
+    <div class="text-gray-600">{{ book?.authors ?? [] | authorsList }}</div>
   </div>
 </div>
