Navigation to favourites

--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -6,16 +6,16 @@
   <div class="p-4 relative z-10">
     <ul class="list-none">
       <li class="py-2 border-b border-gray-200">
-        <a href="#" class="text-gray-800 hover:text-gray-600">Feed</a>
+        <a routerLink="/feed" class="text-gray-800 hover:text-gray-600">Feed</a>
       </li>
       <li class="py-2 border-b border-gray-200">
-        <a href="#" class="text-gray-800 hover:text-gray-600">Reading</a>
+        <a routerLink="/reading" class="text-gray-800 hover:text-gray-600">Reading</a>
       </li>
       <li class="py-2 border-b border-gray-200">
-        <a href="#" class="text-gray-800 hover:text-gray-600">Favorites</a>
+        <a routerLink="/favorites" class="text-gray-800 hover:text-gray-600">Favorites</a>
       </li>
       <li class="py-2">
-        <a href="#" class="text-gray-800 hover:text-gray-600">Recommendations</a>
+        <a routerLink="/recommendations" class="text-gray-800 hover:text-gray-600">Recommendations</a>
       </li>
     </ul>
   </div>
