--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -1,4 +1,3 @@
-<!-- src/app/book-details/book-details.component.html -->
 <div class="p-4 bg-white rounded-lg shadow-md w-full">
   <div *ngIf="book$ | async as book; else loading">
     <ng-container *ngIf="!isLoading; else loading">
@@ -19,7 +18,7 @@
         </div>
         <div class="w-2/3 pl-4">
           <div class="mb-2">
-            <span class="font-semibold">Authors:</span> {{ authorsList$ | async }}
+            <span class="font-semibold">Authors:</span> {{ book.authors | authorsList }}
           </div>
           <div class="mb-2">
             <span class="font-semibold">Description:</span> {{ book.description }}
