--- a/src/shared/book-card/book-card.component.html
+++ b/src/shared/book-card/book-card.component.html
@@ -1,5 +1,5 @@
 <div class="max-w-sm mx-auto bg-white shadow-lg rounded-lg overflow-hidden">
-  <div class="relative h-80 w-52">
+  <div class="relative w-full h-80">
     <img *ngIf="book" [src]="'api/books/cover/' + book.coverId + '?size=l'" class="w-full h-full object-cover" alt="">
   </div>
   <div class="p-4">
