--- a/src/shared/book-card/book-card.component.html
+++ b/src/shared/book-card/book-card.component.html
@@ -1,4 +1,4 @@
-<div class="max-w-sm mx-auto bg-white shadow-lg rounded-lg overflow-hidden">
+<div class="max-w-sm mx-auto bg-white shadow-lg rounded-lg overflow-hidden transition-shadow duration-300 hover:shadow-2xl">
   <div class="relative w-full h-80">
     <img *ngIf="book" [src]="'api/books/cover/' + book.coverId + '?size=l'" class="w-full h-full object-cover" alt="">
   </div>
