--- a/src/app/user-favorites/user-favorites.component.html
+++ b/src/app/user-favorites/user-favorites.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto p-4" >
+<div class="container mx-auto px-4" >
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
     <app-book-card *ngFor="let book of favoriteBooks" [book]="book"></app-book-card>
   </div>
