--- a/src/shared/book-card/book-card.component.html
+++ b/src/shared/book-card/book-card.component.html
@@ -1,7 +1,10 @@
-<div class="max-w-sm mx-auto bg-white shadow-lg rounded-lg overflow-hidden transition-shadow duration-300 hover:shadow-2xl">
+<div class="max-w-sm mx-auto bg-white shadow-lg rounded-lg overflow-hidden transition-shadow duration-300 hover:shadow-2xl relative">
   <div class="relative w-full h-80">
     <img *ngIf="book" [src]="'api/books/cover/' + book.coverId + '?size=l'" class="w-full h-full object-cover" alt="">
   </div>
+  <button (click)="toggleFavorite(book)" [class.text-yellow-500]="book?.isFavorite" class="absolute top-2 right-2 text-gray-400 hover:text-yellow-500">
+    <i class="fas fa-star"></i>
+  </button>
   <div class="p-4">
     <div class="text-xl font-semibold">{{ book?.title }}</div>
     <div class="text-gray-600">{{ book?.authors ?? [] | authorsList }}</div>
