Adjust styling for extra large screens

--- a/src/app/user-favorites/user-favorites.component.sass
+++ b/src/app/user-favorites/user-favorites.component.sass
@@ -12,5 +12,8 @@
       grid-template-columns: repeat(3, 1fr) // 3 columns for larger containers
 
 
-    @container (min-width: 1024px)
-      grid-template-columns: repeat(4, 1fr) // 4 columns for extra-large containers
+    @container (min-width: 900px)
+      grid-template-columns: repeat(4, 1fr)
+
+    @container (min-width: 1200px)
+      grid-template-columns: repeat(5, 1fr) // 4 columns for extra-large containers
