Remove a book from favorites without having to refresh

--- a/src/app/user-favorites/user-favorites.component.html
+++ b/src/app/user-favorites/user-favorites.component.html
@@ -3,6 +3,7 @@
     <app-book-card
       *ngFor="let book of favoriteBooks"
       [book]="book"
+      (removedFromFavorites)="onRemovedFromFavorites($event)"
     ></app-book-card>
   </div>
 </div>
