--- a/src/app/user-favorites/user-favorites.component.html
+++ b/src/app/user-favorites/user-favorites.component.html
@@ -1,9 +1,16 @@
 <div class="container mx-auto px-4" style="container-type: inline-size;">
-  <div class="grid gap-4">
-    <app-book-card
-      *ngFor="let book of favoriteBooks"
-      [book]="book"
-      (removedFromFavorites)="onRemovedFromFavorites($event)"
-    ></app-book-card>
+  <div *ngIf="isLoading; else content" class="grid gap-4">
+    <div *ngFor="let _ of [1, 2, 3, 4, 5]" class="animate-pulse">
+      <div class="h-48 bg-gray-300 rounded-md"></div>
+    </div>
   </div>
+  <ng-template #content>
+    <div class="grid gap-4">
+      <app-book-card
+        *ngFor="let book of favoriteBooks"
+        [book]="book"
+        (removedFromFavorites)="onRemovedFromFavorites($event)"
+      ></app-book-card>
+    </div>
+  </ng-template>
 </div>
