--- a/src/shared/book-card/book-card.component.html
+++ b/src/shared/book-card/book-card.component.html
@@ -1,7 +1,7 @@
 <div class="max-w-sm mx-auto bg-white shadow-lg rounded-lg overflow-hidden transition-shadow duration-300 hover:shadow-2xl relative">
   <div class="relative w-full h-80">
     <div class="absolute inset-0 flex justify-center items-center" [class.hidden]="imageLoaded">
-      <div class="h-full w-full bg-gray-300 rounded-md animate-pulse"></div>
+      <div class="h-full w-full bg-gray-300 rounded-t-md animate-pulse"></div>
     </div>
     <img *ngIf="book" [src]="'api/books/cover/' + book.coverId + '?size=l'" class="w-full h-full object-cover" alt="" (load)="imageLoaded = true">
   </div>
