--- a/src/app/search/search-results/search-results.component.html
+++ b/src/app/search/search-results/search-results.component.html
@@ -1,1 +1,15 @@
-<p>search-results works!</p>
+<div class="max-w-4xl mx-auto p-4">
+  <div class="flex border-b border-gray-200">
+    <a routerLink="books" routerLinkActive="border-b-2" class="px-4 py-2 text-gray-600 hover:text-gray-800 focus:outline-none">
+      Books
+    </a>
+    <a routerLink="readers" routerLinkActive="border-b-2" class="px-4 py-2 text-gray-600 hover:text-gray-800 focus:outline-none">
+      Readers
+    </a>
+    <a routerLink="authors" routerLinkActive="border-b-2" class="px-4 py-2 text-gray-600 hover:text-gray-800 focus:outline-none">
+      Authors
+    </a>
+  </div>
+
+  <router-outlet></router-outlet>
+</div>
