--- a/src/app/search/search-results/search-results-books/search-results-books.component.html
+++ b/src/app/search/search-results/search-results-books/search-results-books.component.html
@@ -1,1 +1,16 @@
-<p>search-results-books works!</p>
+<div class="container mx-auto px-4" style="container-type: inline-size;">
+  <div *ngIf="isLoading; else content" class="grid gap-4">
+    <div *ngFor="let _ of [1, 2, 3, 4, 5]" class="animate-pulse">
+      <div class="h-48 bg-gray-300 rounded-md"></div>
+    </div>
+  </div>
+  <ng-template #content>
+    <div class="grid gap-4">
+      <app-book-card
+        *ngFor="let book of searchResult"
+        [book]="book"
+        (removedFromFavorites)="onRemovedFromFavorites($event)"
+      ></app-book-card>
+    </div>
+  </ng-template>
+</div>
