--- a/src/app/search/search-bar/search-bar.component.html
+++ b/src/app/search/search-bar/search-bar.component.html
@@ -12,6 +12,8 @@
         <app-search-result [result]="item" [isLoading]="loading"></app-search-result>
       </li>
     </ul>
-    <div class="p-2 text-center text-blue-500 cursor-pointer hover:underline">All Results...</div>
+    <div class="p-2 text-center text-blue-500 cursor-pointer hover:underline">
+      <a [routerLink]="['/search-results']">All Results...</a>
+    </div>
   </div>
 </div>
