--- a/src/app/search/search-results/search-results.component.html
+++ b/src/app/search/search-results/search-results.component.html
@@ -11,5 +11,7 @@
     </a>
   </div>
 
-  <router-outlet></router-outlet>
+  <div class="mt-4">
+    <router-outlet></router-outlet>
+  </div>
 </div>
