--- a/src/app/search/search-results/search-results-books/search-results-books.component.html
+++ b/src/app/search/search-results/search-results-books/search-results-books.component.html
@@ -1,7 +1,7 @@
 <div class="container mx-auto px-4" style="container-type: inline-size;">
   <div *ngIf="isLoading; else content" class="grid gap-4">
     <div *ngFor="let _ of [1, 2, 3, 4, 5]" class="animate-pulse">
-      <div class="h-48 bg-gray-300 rounded-md"></div>
+      <div class="h-72 w-full bg-gray-300 rounded-md"></div>
     </div>
   </div>
   <ng-template #content>
