--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,12 @@
         <label for="password" class="block text-gray-700">Password</label>
         <input type="password" id="password" [(ngModel)]="password" name="password" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
       </div>
-      <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600">Log In</button>
+      <div class="flex justify-center">
+        <button *ngIf="!isLoading" type="submit" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600">Log In</button>
+        <div *ngIf="isLoading" class="flex items-center justify-center">
+          <i class="fas fa-spinner fa-spin text-blue-500 text-2xl"></i>
+        </div>
+      </div>
     </form>
     <div *ngIf="errorMessage" class="mt-4 text-red-500 text-center">
       {{ errorMessage }}
