--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -24,7 +24,12 @@
             <span class="font-semibold">Description:</span> {{ book.description }}
           </div>
           <div class="mb-2">
-            <span class="font-semibold">Subjects:</span> {{ (book.subjects).join(', ') }}
+            <span class="font-semibold">Subjects:</span>
+            <div class="flex flex-wrap gap-2 mt-2">
+              <span *ngFor="let subject of book.subjects" class="bg-blue-100 text-blue-800 text-sm font-medium mr-2 px-2.5 py-0.5 rounded">
+                {{ subject }}
+              </span>
+            </div>
           </div>
         </div>
       </div>
