--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -26,9 +26,9 @@
           <div class="mb-2">
             <span class="font-semibold">Subjects:</span>
             <div class="flex flex-wrap gap-2 mt-2">
-              <span *ngFor="let subject of getDisplayedSubjects()" class="bg-blue-100 text-blue-800 text-sm font-medium mr-2 px-2.5 py-0.5 rounded">
+              <a *ngFor="let subject of getDisplayedSubjects()" href="#" class="bg-blue-100 text-blue-800 text-sm font-medium mr-2 px-2.5 py-0.5 rounded">
                 {{ subject }}
-              </span>
+              </a>
               <button *ngIf="processedSubjects.length > 10" (click)="toggleShowAllTags()" class="text-blue-500 hover:underline">
                 {{ showAllTags ? 'Show less...' : 'Show more...' }}
               </button>
