update links, change 'Reading' to 'My Shelves' in top and side menus

--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -7,7 +7,7 @@
       <a routerLink="/feed" class="text-gray-800 hover:text-gray-600">Feed</a>
     </li>
     <li>
-      <a routerLink="/reading" class="text-gray-800 hover:text-gray-600">Reading</a>
+      <a routerLink="/my-shelves" class="text-gray-800 hover:text-gray-600">My Shelves</a>
     </li>
     <li>
       <a routerLink="/favorites" class="text-gray-800 hover:text-gray-600">Favorites</a>
