add user-shelves component with template and styles

--- a/src/shared/shelf-list/shelf-list.component.sass
+++ b/src/shared/shelf-list/shelf-list.component.sass
@@ -17,3 +17,7 @@
 
     @container (min-width: 1200px)
       grid-template-columns: repeat(5, 1fr) // 4 columns for extra-large containers
+
+:host
+  display: block
+  position: relative
