add user-shelves component with dynamic shelf rendering and update routes

--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -9,7 +9,7 @@
         <a routerLink="/feed" class="text-gray-800 hover:text-gray-600">Feed</a>
       </li>
       <li class="py-2 border-b border-gray-200">
-        <a routerLink="/my-shelves" class="text-gray-800 hover:text-gray-600">My Shelves</a>
+        <a routerLink="/shelves" class="text-gray-800 hover:text-gray-600">My Shelves</a>
       </li>
       <li class="py-2 border-b border-gray-200">
         <a routerLink="/favorites" class="text-gray-800 hover:text-gray-600">Favorites</a>
