--- a/src/shared/shelf-card/shelf-card.component.html
+++ b/src/shared/shelf-card/shelf-card.component.html
@@ -1,8 +1,8 @@
 <div class="relative w-full h-64">
   <div class="absolute inset-0 flex items-center justify-center">
     <div class="relative w-48 h-64 bg-white shadow-lg rounded-lg overflow-hidden">
-      <img [src]="mainImageUrl" alt="Main Image" class="w-full h-48 object-cover">
-      <div class="p-4">
+      <img [src]="mainImageUrl" alt="Main Image" class="w-full h-full object-cover">
+      <div class="absolute bottom-0 w-full bg-white bg-opacity-75 p-4">
         <h2 class="text-lg font-semibold">{{ shelfName }}</h2>
       </div>
     </div>
@@ -10,7 +10,7 @@
   <ng-container *ngFor="let imageUrl of additionalImageUrls; let i = index">
     <div class="absolute inset-0 flex items-center justify-center" [ngStyle]="{'top': (i + 1) * 10 + 'px', 'left': (i + 1) * 10 + 'px'}">
       <div class="relative w-48 h-64 bg-white shadow-lg rounded-lg overflow-hidden">
-        <img [src]="imageUrl" alt="Additional Image" class="w-full h-48 object-cover">
+        <img [src]="imageUrl" alt="Additional Image" class="w-full h-full object-cover">
       </div>
     </div>
   </ng-container>
