--- a/src/shared/shelf-card/shelf-card.component.html
+++ b/src/shared/shelf-card/shelf-card.component.html
@@ -1,6 +1,6 @@
 <div class="relative w-full h-64">
   <ng-container *ngFor="let imageUrl of images; let i = index">
-    <div class="absolute inset-0 flex items-center justify-center" [ngStyle]="{'top': i * 10 + 'px', 'left': i * 10 + 'px'}">
+    <div class="absolute inset-0 flex items-center justify-center" [ngStyle]="{'top': i * 10 + 'px', 'left': i * 10 + 'px', 'z-index': images.length - i}">
       <div class="relative w-48 h-64 bg-white shadow-lg rounded-lg overflow-hidden">
         <img [src]="imageUrl" alt="Image" class="w-full h-full object-cover">
         <div *ngIf="i === 0" class="absolute bottom-0 w-full bg-white bg-opacity-75 p-4">
