add title bar to shelf-card for improved image display

--- a/src/shared/shelf-card/shelf-card.component.sass
+++ b/src/shared/shelf-card/shelf-card.component.sass
@@ -1,3 +1,7 @@
-.group:hover .absolute
+.group:hover .absolute:not(.title-bar)
   top: calc(var(--index) * 15px)!important
   left: calc(var(--index) * 15px)!important
+
+.title-bar
+  bottom: 0
+  height: 4rem
