add shadow effect on hover for shelf-card component

--- a/src/shared/shelf-card/shelf-card.component.html
+++ b/src/shared/shelf-card/shelf-card.component.html
@@ -1,12 +1,12 @@
 <div class="relative w-full h-64 group">
-        <ng-container *ngFor="let imageUrl of images; let i = index">
-          <div class="absolute inset-0 flex items-center justify-center transition-all duration-300" [ngStyle]="{'--index': i, 'top': i * 10 + 'px', 'left': i * 10 + 'px', 'z-index': images.length - i}">
-            <div class="relative w-48 h-64 bg-white shadow-lg rounded-lg overflow-hidden">
-              <img [src]="imageUrl" alt="Image" class="w-full h-full object-cover">
-              <div *ngIf="i === 0" class="absolute bottom-0 w-full bg-white bg-opacity-75 p-4 h-16 title-bar">
-                <h2 class="text-lg font-semibold">{{ title }}</h2>
-              </div>
-            </div>
-          </div>
-        </ng-container>
+  <ng-container *ngFor="let imageUrl of images; let i = index">
+    <div class="absolute inset-0 flex items-center justify-center transition-all duration-300" [ngStyle]="{'--index': i, 'top': i * 10 + 'px', 'left': i * 10 + 'px', 'z-index': images.length - i}">
+      <div class="relative w-48 h-64 bg-white shadow-lg group-hover:shadow-2xl rounded-lg overflow-hidden transition-shadow duration-300">
+        <img [src]="imageUrl" alt="Image" class="w-full h-full object-cover">
+        <div *ngIf="i === 0" class="absolute bottom-0 w-full bg-white bg-opacity-75 p-4 h-16 title-bar">
+          <h2 class="text-lg font-semibold">{{ title }}</h2>
+        </div>
       </div>
+    </div>
+  </ng-container>
+</div>
