--- a/src/shared/shelf-card/shelf-card.component.sass
+++ b/src/shared/shelf-card/shelf-card.component.sass
@@ -5,3 +5,10 @@
 .title-bar
   bottom: 0
   height: 4rem
+
+h2
+  font-weight: 550 // Adjust the font weight to make it less bold
+
+p
+  margin-top: 0.25rem
+  font-size: 0.875rem
