add add-collection-card component to shelf-list for collection management

--- a/src/shared/shelf-list/shelf-list.component.html
+++ b/src/shared/shelf-list/shelf-list.component.html
@@ -5,5 +5,6 @@
       [title]="shelf.shelfName"
       [images]="shelf.images"
     ></app-shelf-card>
+    <app-add-collection-card></app-add-collection-card>
   </div>
 </div>
