--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -4,7 +4,7 @@
                   <div class="flex justify-between items-center mb-4">
                     <div class="text-2xl font-semibold">{{ book.title }}</div>
                     <div class="flex items-center space-x-2">
-                      <app-shelve (bookAdded)="onBookAdded()" class="mt-0.5"></app-shelve>
+                      <app-shelve [items]="(shelves$| async) ?? []" class="mt-0.5"/>
                       <button (click)="toggleFavorite(book)" [class.text-yellow-500]="isFavorite"
                               class="text-gray-400 hover:text-yellow-500">
                         <i class="fas fa-star"></i>
