--- a/src/shared/shelve/shelve.component.html
+++ b/src/shared/shelve/shelve.component.html
@@ -6,10 +6,9 @@
   <div *ngIf="showFlyout" class="absolute top-full right-0 mt-2 w-48 bg-white border border-gray-300 rounded-lg shadow-lg">
     <ul *ngIf="items.length > 0; else noShelves">
       <li *ngFor="let item of items" class="p-2 hover:bg-gray-100">
-        <span [class.font-bold]="item.isOnShelf">{{ item.name }}</span>
-        <button (click)="toggleShelf(item)" class="ml-2 text-sm text-blue-500 hover:underline">
-          {{ item.isOnShelf ? 'Remove' : 'Add' }}
-        </button>
+        <span (click)="toggleShelf(item)" [class.font-bold]="item.isOnShelf" class="cursor-pointer">
+          {{ item.name }}
+        </span>
       </li>
     </ul>
     <ng-template #noShelves>
